--- a/simpleBlog/Web.config
+++ b/simpleBlog/Web.config
@@ -11,6 +11,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/login"></forms>
+    </authentication>
+    
+    <!--override roll manager-->
+    <roleManager enabled="true" defaultProvider="SimpleBlogRoleProvider">
+      <providers>
+        <clear/>
+        <add name="SimpleBlogRoleProvider" type="simpleBlog.Infrastructure.RoleProvider" />
+      </providers>
+    </roleManager>
+    
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
