--- a/simpleBlog/Web.config
+++ b/simpleBlog/Web.config
@@ -10,6 +10,12 @@
      <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <connectionStrings>
+    <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=123;"/>
+  </connectionStrings>
+  
+    
   <system.web>
     <authentication mode="Forms">
       <forms loginUrl="~/login"></forms>
