--- a/simpleBlog/Web.config
+++ b/simpleBlog/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=123;"/>
+    <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=123;" />
   </connectionStrings>
   
     
@@ -52,4 +52,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
